--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+**/__cache*
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
