--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - "pip install ."
 before_script:
 script:
-  - pytest --cov-report html --cov marshpillow --verbose
+  - pytest --cov . --cov-report term-missing --pep8 .
 after_success:
   - coveralls
