--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "3.7-dev" # 3.7 development branch
   - "nightly"
 install:
-  - "pip install ."
+  - pip install .
 before_install:
   - pip install pytest pytest-cov
   - pip install coveralls
