rst md conversion

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ install:
 - pip install .
 before_install:
 - pip install pyandoc
-- pandoc --from=markdown --to=rst --output=README.rst README.md
 - pip install pytest pytest-cov
 - pip install coveralls
+after_install:
+- pandoc --from=markdown --to=rst --output=README.rst README.md
 script:
 - py.test
 after_success:
